--- a/.github/workflows/docker-image-apache.yml
+++ b/.github/workflows/docker-image-apache.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       working-directory: ./apache
-      run: docker build . --file /Dockerfile --tag mrfelix/apache:latest
+      run: docker build . --file Dockerfile --tag mrfelix/apache:latest
     - name: Docker Login
       uses: docker/login-action@v2.0.0
       with:
