Change nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,6 @@ server {
   server_name localhost;
 
   location / {
-    proxy_pass http://beetroot:8080/;
+    proxy_pass http://localhost:8080/;
   }
 }
