Fix webserver configuration

--- a/apache/apache.conf
+++ b/apache/apache.conf
@@ -1,7 +1,7 @@
-<VirtualHost *:8080> 
+<VirtualHost *:80> 
   ProxyPreserveHost On
   ProxyRequests Off
   ServerName localhost
-  ProxyPass / http://beetroot:8080/
-  ProxyPassReverse / http://beetroot:8080/
+  ProxyPass / http://localhost:8080/
+  ProxyPassReverse / http://localhost:8080/
 </VirtualHost>
